add onvif inputs function
